--- a/flower.html
+++ b/flower.html
@@ -13,7 +13,7 @@
     <div id="lyrics">
      
     </div>
-    <h1 class="titulo">These pink flowers are a reflection of the kindness you bring to my life. <br>Thank you for brightening with my days with your presence. 
+    <h1 class="titulo">These pink flowers are a reflection of the kindness you bring to my life. <br>Thank you for brightening my days with your presence. 
 </h1>
   
     <div class="night"></div>
